--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+
 #ignorar pasta adicionais 
 build-Acionar_Cooler_GPU-QT_5_5_1_Jetson-Debug/
+
+/home/ubuntu/Projeto_Virtual_Hardware/QtCreator/Teste_Painel_Botoes/build-Teste_Painel_Botoes-QT_5_5_1_Jetson-Debug
