--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Remover pastas a serem enviadas ao github
-./Teste_Painel_Botoes/Teste_Painel_Botoes/html
-./Teste_Painel_Botoes/Teste_Painel_Botoes/latex
- 
+./Teste_Painel_Botoes/html/
+./Teste_Painel_Botoes/latex/
+ build-Teste_Painel_Botoes-QT_5_5_1_Jetson-Debug/
+
+
+
